# BaxterIntentionRecognition

devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
devel/include/collab/: Intention.h  ObjectProperties.h  SceneComposition.h
devel/lib/collab/: ActionPerformer  CloudReader  Communicator  SpeechHandler  collab
devel/lib/pkgconfig/: collab.pc
devel/lib/python2.7/dist-packages/collab/msg/: _Intention.py  _ObjectProperties.py  _SceneComposition.py  __init__.py
devel/share/collab/cmake/: collab-msg-extras.cmake  collab-msg-paths.cmake  collabConfig.cmake
devel/share/common-lisp/ros/collab/msg/: Intention.lisp  ObjectProperties.lisp  SceneComposition.lisp  _package.lisp  _package_Intention.lisp  _package_ObjectProperties.lisp  _package_SceneComposition.lisp  collab-msg.asd
src/collab/: CMakeLists.txt  CMakeLists.txt~  package.xml~
src/collab/include/collab/: Plane.h  PointCloudRetriever.h  TableObjectDetector.h  TableObjectDetector.hpp  TableObjectModeler.h
src/collab/launch/: BaxterIntentionRecognition.launch
src/collab/msg/: Intention.msg  ObjectActionInfo.msg~  ObjectProperties.msg  SceneComposition.msg
src/collab/src/: ActionPerformer.cpp  CloudReader.cpp  Communicator.cpp  IntentionRecognizer.cpp  IntentionRecognizer.cpp~  Plane.cpp  PointCloudRetriever.cpp  frame_20150309T221034.661573_depth.pclzf  frame_20150309T221034.661573_rgb.pclzf
